# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  debugAppendBody.txt  deleted_code.cpp  main.cpp  outfile1  outfile2  parentConfigTester  resp.html  testRequestHandling  webserv.cbp
catch2/: CMakeLists.txt  Makefile  catch.hpp  configParsing.cpp  test.cbp
config/: config.webserv  parentConfig.cpp  parentConfig.hpp
http/: HTTPResponseMessage.cpp  HTTPResponseMessage.hpp  Request.cpp  Request.hpp
scripts/: Makefile
scripts/mime/: HTTPResponseMessageContentTypeMap.cpp  contentTypeMapGenerator.py
server/: parentServer.cpp  parentServer.hpp  serverObject.cpp  serverObject.hpp  testServer.cpp  testServer.hpp
sockets/: clientSocket.cpp  clientSocket.hpp  listeningSocket.cpp  listeningSocket.hpp  parentSocket.cpp  parentSocket.hpp  serverSocket.cpp  serverSocket.hpp
srcs/: main.cpp
srcs/CGI/: CGI.hpp  CGIRegister.cpp  CGIResponse.cpp
srcs/config/: config.webserv  configParser.cpp  configParser.hpp  configParserLocation.cpp  configParserSetters.cpp  configParserUtils.cpp  parentConfig.cpp  parentConfig.hpp
srcs/handler/: autoindexing.cpp  handler.cpp  handler.hpp  handlerUtils.cpp
srcs/http/: HTTPResponseMessage.cpp  HTTPResponseMessage.hpp  HTTPResponseMessageContentTypeMap.cpp  Request.cpp  Request.hpp  RequestOLD.cpp  RequestOLD.hpp
srcs/server/: CGI.cpp  accept.hpp  accepter.cpp  autoindexing.cpp  handler.cpp  parentServer.cpp  parentServer.hpp  responder.cpp  server.hpp  serverInstance.cpp  serverInstance.hpp  testServer.cpp  testServer.hpp
srcs/sockets/: clientSocket.cpp  clientSocket.hpp  listeningSocket.cpp  listeningSocket.hpp  parentSocket.cpp  parentSocket.hpp  serverSocket.cpp  serverSocket.hpp  socketData.cpp  socketData.hpp
srcs/utils/: dataStructs.cpp  dataStructs.hpp  getNextLine.hpp  kqueueUtils.hpp  printFormatting.hpp  stringUtils.hpp  webserv.cpp  webserv.hpp  webservInit.cpp  webservInit.hpp
srcs/webserver/: accepter.cpp  responder.cpp  webserv.cpp  webserv.hpp  webservInit.cpp
testers/: fakeServer.hpp  parentConfigTester.cpp
testers/catch2/: CMakeLists.txt  Makefile  catch.hpp  configParsing.cpp  test.cbp
testers/http/: HTTPResponseMessageTest.cpp  HTTPResponseMessageTest.hpp
testers/requests/: RequestHandlingTest.cpp  RequestHandlingTest.hpp
testers/testConfigTester/: parentConfigTester.cpp  testConfigParser.hpp  testfile1.webserv  testfile2.webserv  testfile3_1.webserv  testfile3_2.webserv  testfile3_3.webserv  testfile3_4.webserv  testfile3_5.webserv  testfile3_6.webserv  testfile3_7.webserv  testfile3_8.webserv  testfile3_9.webserv  testfile4_1.webserv  testfile4_2.webserv  testfile4_3.webserv  testfile4_4.webserv  testfile4_5.webserv  testfile4_6.webserv  testfile4_7.webserv  testfile4_8.webserv
testers/utils/: httpDataTest.cpp  httpDataTest.hpp
utils/: dataStructs.hpp  stringUtils.hpp
var/cgi-bin/: endless.py  first_cgi.py  toupper.py  toupper_delay.py
var/error_pages/: error403.html  error404.html
var/sites_enabled/: config  config.webserv  configTester
var/www/html/: cool.html  default.html  error.html  index.default.html  index.html  resp.html  test.html
var/www/html/resources/: index.html
var/www/other/: index.html
var/www/other2/: index.html
